bug(UI) Rearrange menu orders with wrap
- the flexwrap feature was changes from `wrap-reverse` to `wrap`
- it rearranges the UI such that old orders appears first while new orders are populated below as the list is updated

[#160851565]

--- a/UI/css/menu.css
+++ b/UI/css/menu.css
@@ -30,7 +30,7 @@
     height: 90%;
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap-reverse;
+    flex-wrap: wrap
   }
   
   #description {
